--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.11.0</version>
 					<configuration>
+					<source>1.7</source>
+                    <target>1.7</target>
 						<suiteXmlFiles>
 							<suiteXmlFile>master.xml</suiteXmlFile>
 						</suiteXmlFiles>
